# lab4

test/: pom.xml  testng-all.xml  testng-fast-exception.xml  testng-math.xml
test/src/main/java/org/example/: Main.java
test/src/test/java/org/example/: MainTest.java
Новая папка/: main.py  math_functions.py  pyproject.toml  pytest.ini  requirements.txt  test_math_functions.py
Новая папка/src/main/example/: Main.py
Новая папка/src/test/example/: MainTest.py
